--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>misr</title>
+    <title>أنجازات مصر</title>
 
     <link rel="stylesheet" href="css/normalizer.css" />
-    <link rel="stylesheet" href="css/project.css" />
+    <link rel="stylesheet" href="css/homepage.css" />
+    <link rel="stylesheet" href="css/global.css">
     <!-- font awesome lib -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- start nav -->
     <div class="nav">
       <div class="container">
-        <div class="logo"><img src="photos/logo.png" alt=""></div>
+        <div class="logo"><img src="photos/logo.png" alt="" /></div>
         <div class="links">
           <ul class="main-links">
             <li><a href="#projects">مشاريع</a></li>
@@ -32,16 +36,18 @@
     <!-- end nav -->
     <!-- start landing -->
     <div class="landing">
-        <div class="container">
-            <div class="landing-items">
-                <div class="landing-pic"><img src="photos/landing-pic.png" alt=""></div>
-                <div class="landing-text">
-                    <h1>تعرف علي اهم انجازات مصر</h1>
-                    <p>قامت مصر بعمل الكثير من الأنجازات في مختلف المجالات</p>
-                    <button class="landing-btn" href="">أبدا</button>
-                </div>
-            </div>    
+      <div class="container">
+        <div class="landing-items">
+          <div class="landing-pic">
+            <img src="photos/landing-page/Construction-pana.png" alt="" />
+          </div>
+          <div class="landing-text">
+            <h1>تعرف علي اهم انجازات مصر</h1>
+            <p>قامت مصر بعمل الكثير من الأنجازات في مختلف المجالات</p>
+            <a href="catag.html"><button class="landing-btn">أبدا</button></a>
+          </div>
         </div>
+      </div>
     </div>
     <!-- end landing -->
     <div class="shape"></div>
@@ -53,38 +59,54 @@
         </div>
         <div class="quality-cards">
           <div class="quality-card">
-            <i class="fa-solid 	fa-hand-fist fa-3x qlty-icon"></i>
+            <i class="fa-solid fa-hand-fist fa-3x qlty-icon"></i>
             <div class="quality-card-text">
-              <h1 style="font-size: 18px;">بالمتانة و القوة</h1>
-              <p>حيث اهتمت الحكومة المصرية بتعيين شركات ذات خبرة واسعة فمجالها 
-                و أيدي عاملة مدربة و أيضا اهتمت الحكومة المصرية بالأشراف علي المشروعات 
-                لضمان جودتها و سلامتها للمواطنين لعدم اهدار المال العام
+              <h1 style="font-size: 18px">بالمتانة و القوة</h1>
+              <p>
+                حيث اهتمت الحكومة المصرية بتعيين شركات ذات خبرة واسعة فمجالها و
+                أيدي عاملة مدربة و أيضا اهتمت الحكومة المصرية بالأشراف علي
+                المشروعات لضمان جودتها و سلامتها للمواطنين لعدم اهدار المال
+                العام
               </p>
             </div>
           </div>
           <div class="quality-card">
-            <i class="fa-solid 	fa-pen-ruler fa-3x qlty-icon"></i>
+            <i class="fa-solid fa-pen-ruler fa-3x qlty-icon"></i>
             <div class="quality-card-text">
-              <h1 style="font-size: 18px;">حسن التخطيط</h1>
-              <p>حيث اهتمت الحكومة المصرية بتعيين شركات ذات خبرة واسعة فمجالها 
-                و أيدي عاملة مدربة و أيضا اهتمت الحكومة المصرية بالأشراف علي المشروعات 
-                لضمان جودتها و سلامتها للمواطنين لعدم اهدار المال العام
+              <h1 style="font-size: 18px">حسن التخطيط</h1>
+              <p>
+                حيث اهتمت الحكومة المصرية بتعيين شركات ذات خبرة واسعة فمجالها و
+                أيدي عاملة مدربة و أيضا اهتمت الحكومة المصرية بالأشراف علي
+                المشروعات لضمان جودتها و سلامتها للمواطنين لعدم اهدار المال
+                العام
               </p>
             </div>
           </div>
           <div class="quality-card">
-            <i class="fa-solid 	fa-people-group fa-3x qlty-icon"></i>
+            <i class="fa-solid fa-people-group fa-3x qlty-icon"></i>
             <div class="quality-card-text">
-              <h1 style="font-size: 18px;">انتفاع المجتمع</h1>
-              <p>حيث اهتمت الحكومة المصرية بتعيين شركات ذات خبرة واسعة فمجالها 
-                و أيدي عاملة مدربة و أيضا اهتمت الحكومة المصرية بالأشراف علي المشروعات 
-                لضمان جودتها و سلامتها للمواطنين لعدم اهدار المال العام
+              <h1 style="font-size: 18px">انتفاع المجتمع</h1>
+              <p>
+                حيث اهتمت الحكومة المصرية بتعيين شركات ذات خبرة واسعة فمجالها و
+                أيدي عاملة مدربة و أيضا اهتمت الحكومة المصرية بالأشراف علي
+                المشروعات لضمان جودتها و سلامتها للمواطنين لعدم اهدار المال
+                العام
               </p>
             </div>
           </div>
         </div>
+        <a href=""><button class="landing-btn">أبدا</button></a>
       </div>
     </div>
     <!-- end qualities -->
+    <!-- start footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="footer-logo">
+          <img src="photos/logo.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- end footer -->
   </body>
 </html>
