--- a/P-catag.html
+++ b/P-catag.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-
+<link rel="icon" type="image/x-icon" href="photos/favicon.png">
     <link rel="stylesheet" href="css/normalizer.css" />
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/P-catg.css" />
@@ -23,7 +23,7 @@
         <!-- start nav -->
         <div class="nav">
           <div class="container">
-            <div class="logo"><img src="photos/logo.png" alt="" /></div>
+            <div class="logo"><img src="photos/landing-page/landing-pic.png" alt="" /></div>
             <div class="links">
               <ul class="main-links">
                 <li><a href="#projects">مشاريع</a></li>
