--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-
+<link rel="icon" type="image/x-icon" href="photos/favicon.png">
     <link rel="stylesheet" href="css/normalizer.css" />
     <link rel="stylesheet" href="css/homepage.css" />
     <link rel="stylesheet" href="css/global.css">
@@ -23,7 +23,7 @@
     <!-- start nav -->
     <div class="nav">
       <div class="container">
-        <div class="logo"><img src="photos/logo.png" alt="" /></div>
+        <div class="logo"><img src="photos/landing-page/landing-pic.png" alt="" /></div>
         <div class="links">
           <ul class="main-links">
             <li><a href="#projects">مشاريع</a></li>
@@ -44,7 +44,7 @@
           <div class="landing-text">
             <h1>تعرف علي اهم انجازات مصر</h1>
             <p>قامت مصر بعمل الكثير من الأنجازات في مختلف المجالات</p>
-            <a href="catag.html"><button class="landing-btn">أبدا</button></a>
+            <a href="P-catag.html"><button class="landing-btn">أبدا</button></a>
           </div>
         </div>
       </div>
@@ -95,7 +95,8 @@
             </div>
           </div>
         </div>
-        <a href=""><button class="landing-btn">أبدا</button></a>
+       <a href=" "><div id="up">أبدا
+       </div></a>
       </div>
     </div>
     <!-- end qualities -->
@@ -103,7 +104,7 @@
     <div class="footer">
       <div class="container">
         <div class="footer-logo">
-          <img src="photos/logo.png" alt="" />
+          <img src="photos/landing-page/landing-pic.png" alt="" />
         </div>
       </div>
     </div>
