--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
           </div>
         </div>
-        <a href=""><button class="landing-btn">أبدا</button></a>
+        <a href="catag.html"><button class="landing-btn">أبدا</button></a>
       </div>
     </div>
     <!-- end qualities -->
