improv catg page p catg aggri catg improv or add

--- a/P-catag.html
+++ b/P-catag.html
@@ -37,15 +37,14 @@
         <!-- start projects -->
     <div class="projects">
       <div class="container">
-        <div class="project-text"></div>
-        <div class="project-cards">
+        <div class="project-text"><h1>المشاريع</h1></div>
+        <div class="project-cards grid">
           <div class="project-card">
             <div class="project-card-img">
-              <img src="photos/project-photos/agricult-P.png" class="border-radius" alt="" />
+              <a href="project html/agri-p-catg.html"><img src="photos/project-photos/agricult-P.png" class="border-radius" alt="" /></a>
             </div>
             <div class="project-card-text">
-              <h1></h1>
-              <p></p>
+              <p>المشاريع الزراعية</p>
             </div>
           </div>
 
