--- a/catag.html
+++ b/catag.html
@@ -7,8 +7,8 @@
     <title>أنجازات مصر</title>
 <link rel="icon" type="image/x-icon" href="photos/favicon.png">
     <link rel="stylesheet" href="css/normalizer.css" />
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/P-catg.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/catg.css" />
     <!-- font awesome lib -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- fonts -->
@@ -37,20 +37,40 @@
 <!--start catagories -->
     <div class="catagories">
       <div class="container">
-        <div class="catagories-cards">
+        <div class="catagories-cards grid">
           <div class="catagories-card">
-            <div class="catagories-card-img"></div>
-            <div class="catagories-card-text"></div>
-          </div>
-          <div class="catagories-card">
-            <div class="catagories-card-img"></div>
-            <div class="catagories-card-text"></div>
-          </div>
-          <div class="catagories-card">
-            <div class="catagories-card-img"></div>
-            <div class="catagories-card-text"></div>
+            <div class="catagories-card-text">
+              <h1>المشاريع</h1>
+              </div>
+              <div class="catagories-card-icons">
+              <i class="fa-city fa-solid fa-8x catagories-card-icon"></i>
+            </div>
+            
+            <a href="P-catag.html"><button class="btn">ابدأ</button></a>
+            </div>
+          
+            <div class="catagories-card">
+              <div class="catagories-card-text">
+                <h1>المشاريع</h1>
+                </div>
+                <div class="catagories-card-icons">
+                <i class="fa-hands-holding-child fa-solid fa-8x catagories-card-icon"></i>
+              </div>
+              <button class="btn">ابدأ</button>
+              </div>
+
+              <div class="catagories-card">
+                <div class="catagories-card-text">
+                  <h1>المشاريع</h1>
+                  </div>
+                  <i class="fa-city fa-solid fa-8x catagories-card-icon"></i>
+                <button class="btn">ابدأ</button>
+                </div>
+        </div>
           </div>
         </div>
       </div>
     </div>
 <!--end catagories -->
+</body>
+</html>
