--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-<link rel="icon" type="image/x-icon" href="photos/favicon.png">
+    <link rel="icon" type="image/x-icon" href="photos/favicon.png" />
     <link rel="stylesheet" href="css/normalizer.css" />
     <link rel="stylesheet" href="css/homepage.css" />
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/global.css" />
     <!-- font awesome lib -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- fonts -->
@@ -23,7 +23,9 @@
     <!-- start nav -->
     <div class="nav">
       <div class="container">
-        <div class="logo"><img src="photos/landing-page/landing-pic.png" alt="" /></div>
+        <div class="logo">
+          <img src="photos/landing-page/landing-pic.png" alt="" />
+        </div>
         <div class="links">
           <ul class="main-links">
             <li><a href="#projects">مشاريع</a></li>
@@ -37,7 +39,7 @@
     <!-- start landing -->
     <div class="landing">
       <div class="container">
-        <div class="landing-items">
+        <div class="landing-items grid">
           <div class="landing-pic">
             <img src="photos/landing-page/Construction-pana.png" alt="" />
           </div>
@@ -57,7 +59,7 @@
         <div class="quality-text">
           <h1>تحلت المشروعات بالأتي</h1>
         </div>
-        <div class="quality-cards">
+        <div class="quality-cards grid">
           <div class="quality-card">
             <i class="fa-solid fa-hand-fist fa-3x qlty-icon"></i>
             <div class="quality-card-text">
@@ -95,10 +97,12 @@
             </div>
           </div>
         </div>
-        <a href="catag.html"><button class="landing-btn">أبدا</button></a>
       </div>
     </div>
     <!-- end qualities -->
+    <div class="bottom">
+      <button class="btn">أبدا<a href="catag.html"></a></button>
+    </div>
     <!-- start footer -->
     <div class="footer">
       <div class="container">
