--- a/project html/agri-p-catg.html
+++ b/project html/agri-p-catg.html
@@ -42,7 +42,7 @@
           <div class="project-cards grid">
             <div class="project-card">
               <div class="project-card-img">
-                <img src="../photos/agri-p-catg/touchka.jpg" class="border-radius" alt="" />
+                <a href="../articles/agri-articles/agri-touchka-article.html"><img src="../photos/agri-p-catg/touchka.jpg" class="border-radius" alt="" /></a>
               </div>
               <div class="project-card-text">
                 <p>مشروع توشكى</p>
