--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="landing-text">
             <h1>تعرف علي اهم انجازات مصر</h1>
             <p>قامت مصر بعمل الكثير من الأنجازات في مختلف المجالات</p>
-            <a href="P-catag.html"><button class="landing-btn">أبدا</button></a>
+            <a href="catag.html"><button class="landing-btn">أبدا</button></a>
           </div>
         </div>
       </div>
