--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="nav">
       <div class="container">
         <div class="logo">
-          <img src="photos/landing-page/landing-pic.png" alt="" />
+          <img src="photos/logo.png" alt="" />
         </div>
         <div class="links">
           <ul class="main-links">
