--- a/project html/agri-p-catg.html
+++ b/project html/agri-p-catg.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-<link rel="icon" type="image/x-icon" href="photos/favicon.png">
+<link rel="icon" type="image/x-icon" href="../photos/logo.png">
     <link rel="stylesheet" href="../css/normalizer.css" />
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/P-catg.css" >
@@ -51,7 +51,7 @@
   
             <div class="project-card">
               <div class="project-card-img">
-              <img src="../photos/agri-p-catg/egypt-future.jpg" class="border-radius" alt=""/>
+              <a href="../articles/agri-articles/agri-egypt-future.html"><img src="../photos/agri-p-catg/egypt-future.jpg" class="border-radius" alt=""/></a>
             </div>
               <div class="project-card-text">
                 <p>مشروع مستقبل مصر</p>
@@ -72,7 +72,7 @@
               <img src="../photos/agri-p-catg/500km.jpg" class="border-radius" alt=""/>
             </div>
               <div class="project-card-text">
-                <p>مشروع استصلاح ٥٠٠ ألف فدان بجنوب محور الضبعة</p>
+                <p>مشروع جنوب محور الضبعة</p>
               </div>
             </div>
           </div>
