article new nav improv

--- a/catag.html
+++ b/catag.html
@@ -26,9 +26,9 @@
             <div class="logo"><img src="photos/logo.png" alt="" /></div>
             <div class="links">
               <ul class="main-links">
-                <li><a href="#projects">مشاريع</a></li>
-                <li><a href="#partners">شركاء</a></li>
-                <li><a href="#initiative">مبادرات</a></li>
+            <li><a href="P-catag.html">مشاريع</a></li>
+            <li><a href="#initiative">مبادرات</a></li>
+            <li><a href="#partners">عنا</a></li>
               </ul>
             </div>
           </div>
