--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         </div>
         <div class="links">
           <ul class="main-links">
-            <li><a href="#projects">مشاريع</a></li>
-            <li><a href="#partners">شركاء</a></li>
+            <li><a href="P-catag.html">مشاريع</a></li>
             <li><a href="#initiative">مبادرات</a></li>
+            <li><a href="#partners">عنا</a></li>
+            
           </ul>
         </div>
       </div>
