--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-    <link rel="icon" type="image/x-icon" href="photos/logo.png" />
+    <link rel="icon" type="image/x-icon" href="photos/output-onlinepngtools.png" />
     <link rel="stylesheet" href="css/normalizer.css" />
     <link rel="stylesheet" href="css/homepage.css" />
     <link rel="stylesheet" href="css/global.css" />
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
   </head>
   <body>
     <!-- start nav -->
@@ -28,10 +29,10 @@
         </div>
         <div class="links">
           <ul class="main-links">
+            <li><a href="index.html">الرئيسية</a></li>
+            <li><a href="#partners">عنا</a></li>
             <li><a href="P-catag.html">مشاريع</a></li>
             <li><a href="#initiative">مبادرات</a></li>
-            <li><a href="#partners">عنا</a></li>
-            
           </ul>
         </div>
       </div>
@@ -108,7 +109,7 @@
     <div class="footer">
       <div class="container">
         <div class="footer-logo">
-          <img src="photos/landing-page/landing-pic.png" alt="" />
+          <img src="photos/logo-trimmy.png" alt="" />
         </div>
       </div>
     </div>
