--- a/project html/agri-p-catg.html
+++ b/project html/agri-p-catg.html
@@ -24,12 +24,13 @@
         <!-- start nav -->
         <div class="nav">
           <div class="container">
-            <div class="logo"><img src="../photos/landing-page/landing-pic.png" alt="" /></div>
+            <div class="logo"><img src="../photos/favicon.png" alt="" /></div>
             <div class="links">
               <ul class="main-links">
-                <li><a href="../P-catag.html">مشاريع</a></li>
-            <li><a href="#initiative">مبادرات</a></li>
+            <li><a href="../index.html">الرئيسية</a></li>
             <li><a href="#partners">عنا</a></li>
+            <li><a href="../P-catag.html">مشاريع</a></li>
+            <li><a href="#initiative">مبادرات</a></li>
               </ul>
             </div>
           </div>
@@ -60,7 +61,7 @@
   
             <div class="project-card">
               <div class="project-card-img">
-              <img src="../photos/agri-p-catg/east-oui.jpg" class="border-radius" alt=""/>
+              <a href="../articles/agri-articles/aest-oui.html"><img src="../photos/agri-p-catg/east-oui.jpg" class="border-radius" alt=""/></a>
             </div>
               <div class="project-card-text">
                 <p>مشروع شرق العوينات</p>
@@ -69,7 +70,7 @@
   
             <div class="project-card">
               <div class="project-card-img">
-              <img src="../photos/agri-p-catg/500km.jpg" class="border-radius" alt=""/>
+              <a href="../articles/agri-articles/agri-north-dabaa.html"><img src="../photos/agri-p-catg/500km.jpg" class="border-radius" alt=""/></a>
             </div>
               <div class="project-card-text">
                 <p>مشروع جنوب محور الضبعة</p>
