--- a/P-catag.html
+++ b/P-catag.html
@@ -23,12 +23,13 @@
         <!-- start nav -->
         <div class="nav">
           <div class="container">
-            <div class="logo"><img src="photos/landing-page/landing-pic.png" alt="" /></div>
+            <div class="logo"><img src="photos/logo.png" alt="" /></div>
             <div class="links">
               <ul class="main-links">
+                <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="#partners">عنا</a></li>
                 <li><a href="P-catag.html">مشاريع</a></li>
                 <li><a href="#initiative">مبادرات</a></li>
-                <li><a href="#partners">عنا</a></li>
               </ul>
             </div>
           </div>
