--- a/P-catag.html
+++ b/P-catag.html
@@ -51,11 +51,10 @@
 
           <div class="project-card">
             <div class="project-card-img">
-            <img src="photos/project-photos/wind-turb-P.jpg" class="border-radius" alt=""/>
+            <a href="project html/enrg-p-catg.html"><img src="photos/project-photos/wind-turb-P.jpg" class="border-radius" alt=""/></a>
           </div>
             <div class="project-card-text">
-              <h1></h1>
-              <p></p>
+              <p>مشاريع الطاقة</p>
             </div>
           </div>
 
