--- a/project html/transp-p-catg.html
+++ b/project html/transp-p-catg.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-<link rel="icon" type="image/x-icon" href="../photos/favicon.png">
+<link rel="icon" type="image/x-icon" href="../photos/logo.png">
     <link rel="stylesheet" href="../css/normalizer.css" />
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/P-catg.css" >
     <link rel="stylesheet" href="../css/agri-p-catg.css">
     <!-- font awesome lib -->
-    <link rel="stylesheet" href="../css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
         <!-- start nav -->
         <div class="nav">
           <div class="container">
-            <div class="logo"><img src="../photos/logo.png" alt="" /></div>
+            <div class="logo"><img src="../photos/favicon.png" alt="" /></div>
             <div class="links">
               <ul class="main-links">
             <li><a href="../index.html">الرئيسية</a></li>
@@ -39,43 +39,35 @@
         <!-- start projects -->
     <div class="projects">
         <div class="container">
-          <div class="project-text"><h1>مشاريع الطاقة</h1></div>
+          <div class="project-text"><h1>مشاريع المواصلات</h1></div>
           <div class="project-cards grid">
             <div class="project-card">
-              <div class="project-card-img border-radius">
-            <a href="../articles/enrg-article/enrg-bnban-station.html"><img src="../photos/enrg-p-catg/bnban-station.jpg" alt="" class="border-radius"></a>
+              <div class="project-card-img">
+                <a href="../articles/transp-articles/trans-article-monorail.html"><img src="../photos/trans-p-catg/monorail.jpg" class="border-radius" alt="" /></a>
               </div>
               <div class="project-card-text">
-                <p>محطة بنبان للطاقة الشمسية</p>
+                <p>مشروع المونوريل</p>
               </div>
             </div>
   
             <div class="project-card">
               <div class="project-card-img">
-                <a href="../articles/enrg-article/enrg-article-daba'a.html"><img src="../photos/enrg-p-catg/daba'a-station.jpg" alt="" class="border-radius"></a>
+              <a href="../articles/agri-articles/agri-egypt-future.html"><img src="../photos/trans-p-catg/lrt.jpg" class="border-radius" alt=""/></a>
             </div>
               <div class="project-card-text">
-                <p>محطة الضبعة النويية</p>
+                <p>مشروع القطار الكهربائي الخفيف</p>
               </div>
             </div>
   
             <div class="project-card">
               <div class="project-card-img">
-              <a href="../articles/enrg-article/enrg-article-suez-wind.html"><img src="../photos/enrg-p-catg/suez-wind.jpg" class="border-radius" alt=""/></a>
+              <a href="../articles/agri-articles/aest-oui.html"><img src="../photos/trans-p-catg/h-speed-rail.jpg" class="border-radius" alt=""/></a>
             </div>
               <div class="project-card-text">
-                <p>مشروع طاقة رياح بمجمع خليج السويس</p>
+                <p>مشروع القطار الكهربائي السريع</p>
               </div>
             </div>
-  
-            <div class="project-card">
-              <div class="project-card-img">
-              <a href="../articles/enrg-article/enrg-article-new-cap-station.html"><img src="../photos/enrg-p-catg/new-cap-station.jpg" class="border-radius" alt=""/></a>
-            </div>
-              <div class="project-card-text">
-                <p>محطة طاقة العاصمة الأدارية تاجديدة</p>
-              </div>
-            </div>
+
           </div>
         </div>
       </div>
