--- a/P-catag.html
+++ b/P-catag.html
@@ -70,11 +70,10 @@
 
           <div class="project-card">
             <div class="project-card-img">
-            <img src="photos/project-photos/metro-P.jpg" class="border-radius" alt=""/>
+            <a href="project html/transp-p-catg.html"><img src="photos/project-photos/metro-P.jpg" class="border-radius" alt=""/></a>
           </div>
             <div class="project-card-text">
-              <h1></h1>
-              <p></p>
+              <p>مشاريع المواصلات</p>
             </div>
           </div>
 
