--- a/project html/transp-p-catg.html
+++ b/project html/transp-p-catg.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>أنجازات مصر</title>
-<link rel="icon" type="image/x-icon" href="../photos/logo.png">
+<link rel="icon" type="image/x-icon" href="../photos/favicon.png">
     <link rel="stylesheet" href="../css/normalizer.css" />
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/P-catg.css" >
@@ -52,7 +52,7 @@
   
             <div class="project-card">
               <div class="project-card-img">
-              <a href="../articles/agri-articles/agri-egypt-future.html"><img src="../photos/trans-p-catg/lrt.jpg" class="border-radius" alt=""/></a>
+              <a href="../articles/transp-articles/trans-article-lrt.html"><img src="../photos/trans-p-catg/lrt.jpg" class="border-radius" alt=""/></a>
             </div>
               <div class="project-card-text">
                 <p>مشروع القطار الكهربائي الخفيف</p>
