--- a/P-catag.html
+++ b/P-catag.html
@@ -79,11 +79,10 @@
 
           <div class="project-card">
             <div class="project-card-img">
-            <img src="photos/project-photos/natu-gas-p.jpg" class="border-radius" alt=""/>
+            <a href="project html/natu-gas-p-catg.html"><img src="photos/project-photos/natu-gas-p.jpg" class="border-radius" alt=""/></a>
           </div>
             <div class="project-card-text">
-              <h1></h1>
-              <p></p>
+              <p>مشاريع الغاز</p>
             </div>
           </div>
 
