--- a/project html/natu-gas-p-catg.html
+++ b/project html/natu-gas-p-catg.html
@@ -39,14 +39,14 @@
         <!-- start projects -->
     <div class="projects">
         <div class="container">
-          <div class="project-text"><h1>المشاريع الزراعية</h1></div>
+          <div class="project-text"><h1>مشاريع الغاز الطبيعي</h1></div>
           <div class="project-cards grid">
             <div class="project-card">
               <div class="project-card-img">
-                <a href="../articles/agri-articles/agri-touchka-article.html"><img src="../photos/agri-p-catg/touchka.jpg" class="border-radius" alt="" /></a>
+                <a href="../articles/natu-gas-articles/natu-gas-article-zahr-field.html"><img src="../photos/natu-gas-p-catg/zahr-field.jpg" class="border-radius" alt="" /></a>
               </div>
               <div class="project-card-text">
-                <p>مشروع توشكى</p>
+                <p>مشروع حقل ظهر</p>
               </div>
             </div>
   
