--- a/catag.html
+++ b/catag.html
@@ -26,10 +26,10 @@
             <div class="logo"><img src="photos/logo.png" alt="" /></div>
             <div class="links">
               <ul class="main-links">
-                <li><a href="../index.html">الرئيسية</a></li>
+                <li><a href="index.html">الرئيسية</a></li>
                 <li><a href="#partners">عنا</a></li>
-                <li><a href="../P-catag.html">مشاريع</a></li>
-                <li><a href="#initiative">مبادرات</a></li>
+                <li><a href="P-catag.html">مشاريع</a></li>
+                <li><a href="init-catg.html">مبادرات</a></li>
               </ul>
             </div>
           </div>
@@ -52,12 +52,12 @@
           
             <div class="catagories-card">
               <div class="catagories-card-text">
-                <h1>المشاريع</h1>
+                <h1>المبادرات</h1>
                 </div>
                 <div class="catagories-card-icons">
                 <i class="fa-hands-holding-child fa-solid fa-8x catagories-card-icon"></i>
               </div>
-              <button class="btn">ابدأ</button>
+              <a href="init-catg.html"><button class="btn">ابدأ</button></a>
               </div>
         </div>
           </div>
