--- a/init-catg.html
+++ b/init-catg.html
@@ -42,10 +42,10 @@
         <div class="project-cards grid">
           <div class="project-card">
             <div class="project-card-img">
-              <a href="project html/agri-p-catg.html"><img src="photos/project-photos/agricult-P.png" class="border-radius" alt="" /></a>
+              <a href="articles/init-articles/100-mill-health-article.html"><img src="photos/init-catg/100-mill-health.jpg" class="border-radius" alt="" /></a>
             </div>
             <div class="project-card-text">
-              <p>المشاريع الزراعية</p>
+              <p>مبادرة 100 مليون صحة</p>
             </div>
           </div>
 
@@ -55,25 +55,6 @@
           </div>
             <div class="project-card-text">
               <p>مشاريع الطاقة</p>
-            </div>
-          </div>
-
-
-          <div class="project-card">
-            <div class="project-card-img">
-            <a href="project html/transp-p-catg.html"><img src="photos/project-photos/metro-P.jpg" class="border-radius" alt=""/></a>
-          </div>
-            <div class="project-card-text">
-              <p>مشاريع المواصلات</p>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="project-card-img">
-            <a href="project html/natu-gas-p-catg.html"><img src="photos/project-photos/natu-gas-p.jpg" class="border-radius" alt=""/></a>
-          </div>
-            <div class="project-card-text">
-              <p>مشاريع الغاز</p>
             </div>
           </div>
         </div>
