--- a/project html/natu-gas-p-catg.html
+++ b/project html/natu-gas-p-catg.html
@@ -30,7 +30,7 @@
             <li><a href="../index.html">الرئيسية</a></li>
             <li><a href="#partners">عنا</a></li>
             <li><a href="../P-catag.html">مشاريع</a></li>
-            <li><a href="#initiative">مبادرات</a></li>
+            <li><a href="../init-catg.html">مبادرات</a></li>
               </ul>
             </div>
           </div>
@@ -47,33 +47,6 @@
               </div>
               <div class="project-card-text">
                 <p>مشروع حقل ظهر</p>
-              </div>
-            </div>
-  
-            <div class="project-card">
-              <div class="project-card-img">
-              <a href="../articles/agri-articles/agri-egypt-future.html"><img src="../photos/agri-p-catg/egypt-future.jpg" class="border-radius" alt=""/></a>
-            </div>
-              <div class="project-card-text">
-                <p>مشروع مستقبل مصر</p>
-              </div>
-            </div>
-  
-            <div class="project-card">
-              <div class="project-card-img">
-              <a href="../articles/agri-articles/aest-oui.html"><img src="../photos/agri-p-catg/east-oui.jpg" class="border-radius" alt=""/></a>
-            </div>
-              <div class="project-card-text">
-                <p>مشروع شرق العوينات</p>
-              </div>
-            </div>
-  
-            <div class="project-card">
-              <div class="project-card-img">
-              <a href="../articles/agri-articles/agri-north-dabaa.html"><img src="../photos/agri-p-catg/500km.jpg" class="border-radius" alt=""/></a>
-            </div>
-              <div class="project-card-text">
-                <p>مشروع جنوب محور الضبعة</p>
               </div>
             </div>
           </div>
