--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
         <div class="links">
           <ul class="main-links">
             <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="#partners">عنا</a></li>
+            <li><a href="about.html">عنا</a></li>
             <li><a href="P-catag.html">مشاريع</a></li>
-            <li><a href="#initiative">مبادرات</a></li>
+            <li><a href="init-catg.html">مبادرات</a></li>
           </ul>
         </div>
       </div>
@@ -42,7 +42,7 @@
     <div class="about">
         <div class="container">
             <div class="about-header"><h1>عنا</h1></div>
-            <div class="about-text"></div>
+            <div class="about-text">هذا الموقع صمم ليسلتط الضوء علي أخر أنجازات مصر من مبادرات و مشاريع في مختلف المجالات(الزراعة،المواصلات،الغاز الطبيعي،الطاقة)</div>
         </div>
     </div>
     <!-- end about -->
