--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="links">
           <ul class="main-links">
             <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="#partners">عنا</a></li>
+            <li><a href="about.html">عنا</a></li>
             <li><a href="P-catag.html">مشاريع</a></li>
             <li><a href="init-catg.html">مبادرات</a></li>
           </ul>
