--- a/init-catg.html
+++ b/init-catg.html
@@ -27,7 +27,7 @@
             <div class="links">
               <ul class="main-links">
                 <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="#partners">عنا</a></li>
+                <li><a href="about.html">عنا</a></li>
                 <li><a href="P-catag.html">مشاريع</a></li>
                 <li><a href="init-catg.html">مبادرات</a></li>
               </ul>
@@ -38,7 +38,7 @@
         <!-- start projects -->
     <div class="projects">
       <div class="container">
-        <div class="project-text"><h1>المشاريع</h1></div>
+        <div class="project-text"><h1>المبادرات</h1></div>
         <div class="project-cards grid">
           <div class="project-card">
             <div class="project-card-img">
@@ -51,10 +51,10 @@
 
           <div class="project-card">
             <div class="project-card-img">
-            <a href="project html/enrg-p-catg.html"><img src="photos/project-photos/wind-turb-P.jpg" class="border-radius" alt=""/></a>
+            <a href="articles/init-articles/decent-life-article.html"><img src="photos/init-catg/decent-life.jpg" class="border-radius" alt=""/></a>
           </div>
             <div class="project-card-text">
-              <p>مشاريع الطاقة</p>
+              <p>مبادرة حياة كريمة</p>
             </div>
           </div>
         </div>
