--- a/about.html
+++ b/about.html
@@ -42,7 +42,14 @@
     <div class="about">
         <div class="container">
             <div class="about-header"><h1>عنا</h1></div>
-            <div class="about-text">هذا الموقع صمم ليسلتط الضوء علي أخر أنجازات مصر من مبادرات و مشاريع في مختلف المجالات(الزراعة،المواصلات،الغاز الطبيعي،الطاقة)</div>
+            <div class="about-text"> هذا الموقع صمم ليسلتط الضوء علي أخر أنجازات مصر من مبادرات و مشاريع في مختلف المجالات
+              (الزراعة،المواصلات،الغاز الطبيعي،الطاقة) <br>
+
+              و في الموقع سيجد المستخدم المشروعات مصنفة حسب المجال المنفذة فيه و داخل كل مجال سيجد المستخدم المقالات عن المشروعات المنفذة فيه و داخل كل مقال سيجدالمستخدم في بدايته جميع محتويات المقال ليساعد المستخدم في التنقل في المقال بسرعة و يوجد أيضا زر في الجزء الأسفل من الصفحة للطلوع لأعلي الصفحة 
+              و كل مقال مقسم إلي عدة أجزاء لتسهيل القراءة و البحث عن المعلومات.<br><br>
+
+            وصمم هذا الموقع بمراعة شديدة لصحة المعلومات المستخدمة و يوجد في نهاية كل مقال جميع المصادر المستخدمة في كتابة هذا المقال ليتأكد القارئ من صحة المعلومات <br><br>
+          </div>
         </div>
     </div>
     <!-- end about -->
